cmake_minimum_required(VERSION 3.19)
project(ProgramowanieObiektoweC__)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProgramowanieObiektoweC__ main.cpp Lista1/Zadanie1_1/Zadanie1_1.cpp Lista1/Zadanie1_1/Zadanie1_1.h
        Lista1/Zadanie1_2/Zadanie1_2.cpp Lista1/Zadanie1_2/Zadanie1_2.h
        Lista1/Zadanie1_4/Zadanie_1_4.cpp Lista1/Zadanie1_4/Zadanie_1_4.h
        Lista1/Zadanie1_3/Zadanie1_3.cpp Lista1/Zadanie1_3/Zadanie1_3.h)