cmake_minimum_required(VERSION 3.19)
project(ProgramowanieObiektoweC__)

set(CMAKE_CXX_STANDARD 14)

add_executable(ProgramowanieObiektoweC__ main.cpp Lista1/Zadanie1_1/Zadanie1_1.cpp Lista1/Zadanie1_1/Zadanie1_1.h
        Lista1/Zadanie1_2/Zadanie1_2.cpp Lista1/Zadanie1_2/Zadanie1_2.h
        Lista1/Zadanie1_4/Zadanie_1_4.cpp Lista1/Zadanie1_4/Zadanie_1_4.h
        Lista1/Zadanie1_3/Zadanie1_3.cpp Lista1/Zadanie1_3/Zadanie1_3.h
        Lekcja2/Konstruktor1/konstruktor_1.cpp
        Lekcja2/Konstruktor1/konstruktor_1.h
        Lekcja2/Konstruktor2/konstruktor_2.cpp
        Lekcja2/Konstruktor2/konstruktor_2.h
        Lekcja2/Konstruktor_3/konstruktor_3.cpp
        Lekcja2/Konstruktor_3/konstruktor_3.h
        Lekcja2/Konstruktor_4/konstruktor_4.cpp
        Lekcja2/Konstruktor_4/konstruktor_4.h
        Lekcja2/Konstruktor_5/konstruktor_5.cpp
        Lekcja2/Konstruktor_5/konstruktor_5.h
        Lekcja2/Konstruktor_6/konstruktor_6.cpp
        Lekcja2/Konstruktor_6/konstruktor_6.h
        Lista2/Zadanie2_1/Zadanie2_1.cpp
        Lista2/Zadanie2_1/Zadanie2_1.h
        Lista2/Zadanie2_2/Zadanie2_2.cpp
        Lista2/Zadanie2_2/Zadanie2_2.h
        "Lekcja 3/Dziedziczenie/Dziedziczenie_1.cpp"
        "Lekcja 3/Dziedziczenie/Dziedziczenie_1.h"
        "Lekcja 3/Dziedziczenie/Dziedziczenie_2.cpp"
        "Lekcja 3/Dziedziczenie/Dziedziczenie_2.h"
        "Lekcja 3/Dziedziczenie/Lekcja3_1.cpp"
        "Lekcja 3/Dziedziczenie/Lekcja3_1.h"
        "Lekcja 3/Polimorfizm/Polimorfizm_1.cpp"
        "Lekcja 3/Polimorfizm/Polimorfizm_1.h"
        "Lekcja 3/Polimorfizm/Lekcja3_2.cpp"
        "Lekcja 3/Polimorfizm/Lekcja3_2.h"
        "Lekcja 3/Polimorfizm/Lekcja3_4.cpp"
        "Lekcja 3/Polimorfizm/Lekcja3_4.h"
        "Lekcja 3/Polimorfizm/Lekcja3_3.cpp"
        "Lekcja 3/Polimorfizm/Lekcja3_3.h" "Lekcja 3/Polimorfizm/przeciazenie1.cpp"
        "Lekcja 3/Polimorfizm/przeciazenie1.h" "Lekcja 3/Polimorfizm/przeciazenie2.cpp"
        "Lekcja 3/Polimorfizm/przeciazenie2.h" Lekcja4/ulamek.cpp Lekcja4/ulamek.h Lekcja4/product.cpp Lekcja4/product.h)

